# Ocular

./: README.md  install.py
ocular/: pyproject.toml
ocular/app/: __init__.py  playlist.py  theme.py  window.py
ocular/ocular.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
