[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocular"
version = "0.1.0"
description = "Minimalist PyQt6 desktop video viewer powered by VLC"
requires-python = ">=3.11"
dependencies = [
  "PyQt6==6.7.1",
  "python-vlc==3.0.21203",
]

[project.scripts]
ocular = "main:main"

[tool.setuptools]
packages = ["app"]
py-modules = ["main"]
